tests/fixtures/invalid/pow_float_str_set.py
# Cannot call pow() with Float, Str, Set[int]
x = pow(1.0, "hello", {1, 2, 3})
